--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,9 @@
     "ignorePatterns": ["main.js"],
     "rules": {
         "no-console": "off",
-        "no-unused-vars": "off"
+        "no-unused-vars": "off",
+        "default-case": "off",
+        "no-param-reassign": "off"
     },
     "extends": ["airbnb-base", "prettier"]
 }
