--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,8 @@
         "no-console": "off",
         "no-unused-vars": "off",
         "default-case": "off",
-        "no-param-reassign": "off"
+        "no-param-reassign": "off",
+        "import/no-cycle": "off"
     },
     "extends": ["airbnb-base", "prettier"]
 }
